# csb

./: .prospector.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yaml  env.sh  run.sh
requirements/: dev.txt
source/: customer_success_balancing.py
tests/source/: __init__.py  test_customer_success_balancing.py
